layout shift try fix error

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -7,7 +7,7 @@
 
 .main {
   width: 100%;
-  max-width: 90rem;
+  max-width: 78rem;
   margin: 0 auto;
   box-sizing: border-box;
   display: flex;
